Cleaned code